Edited CSS styles for tables

--- a/_posts/2019-03-22-wiki-test.md
+++ b/_posts/2019-03-22-wiki-test.md
@@ -4,14 +4,14 @@ title:  "Wiki Table of Contents"
 tags: [wiki]
 ---
 
-This the main DSC wiki page where we collect all types of information and resources collected by the club. 
+This is the main DSC wiki page where we collect all types of information and resources collected by the club. 
 
 Jump to:
 
 * [Introductory Resources](#intro)
 * [Career & Co-op](#career)
 
-# Introductory Resources <a name="intro"></a>
+## Introductory Resources <a name="intro"></a>
 
 | Title | Description | Type |
 | ------------ | ----------- | ----|
@@ -23,12 +23,8 @@ Jump to:
 
 
 
-# Career & Co-op <a name="career"></a>
+## Career & Co-op <a name="career"></a>
 
 | Title | Description | Type |
 | ------------ | ----------- | --- |
 |[Resume Tips](https://docs.google.com/document/d/1rIcPf0HxjhHT9nZPqRGgzvPDn1CoFBWDsfJ-jpbVQyw/edit?usp=sharing&fbclid=IwAR3pltykesMQgxbLE0do5QAQ8qRl1AHMouw9ZhpL4_vbZHsrpoQfC-EvchY)| This document contains tips addressing common questions we get about resume formatting, wording, and more. | Doc |
-
-# Natural Language Processing
-
-# Reinforcement Learning
